[gd_scene load_steps=5 format=3 uid="uid://bagwfs2w4nl4y"]

[ext_resource type="Script" path="res://mainP10s.gd" id="1_7yapc"]
[ext_resource type="PackedScene" uid="uid://nnhlotbcpy61" path="res://player.tscn" id="3_qr7yb"]
[ext_resource type="PackedScene" uid="uid://b6o4wkqcy62mx" path="res://HUD.tscn" id="4_x7nt4"]

[sub_resource type="Curve2D" id="Curve2D_rjahj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1600, 0, 0, 0, 0, 0, 1600, 896, 0, 0, 0, 0, 0, 896, 0, 0, 0, 0, 0, 0)
}
point_count = 7

[node name="Main" type="Node"]
script = ExtResource("1_7yapc")

[node name="Player" parent="." instance=ExtResource("3_qr7yb")]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_rjahj")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_x7nt4")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
